<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:backgroundTint="@android:color/holo_blue_bright"
    tools:context=".DisplayGraphActivity"
    tools:showIn="@layout/activity_display_graph">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp" />


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dip">

                <TextView
                    android:text="@string/activity_summary"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/holo_green_light" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:text="@string/average_rpm"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:id="@+id/txtAverageRpm"
                    android:textColor="@android:color/holo_red_dark" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:text="@string/average_rpm_time"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:id="@+id/txtAverageRpmTime"
                    android:textColor="@android:color/holo_red_dark" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:text="@string/duration"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:id="@+id/txtDuration"
                    android:textColor="@android:color/holo_red_dark" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <Button
                android:id="@+id/btnSaveTraining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveTraining"
                android:text="@string/save_training" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>